--- a/styles.css
+++ b/styles.css
@@ -193,6 +193,7 @@ a:hover {
   padding-left: .6rem;
   padding-right: .5rem;
   background-color: #f2f2f2; 
+  height: auto;
 }
 
 .content-footer {
