--- a/styles.css
+++ b/styles.css
@@ -101,10 +101,8 @@ a:hover {
        ######################################## */
 .app-container {
   display: flex;
-  height: 100vh;
-  width: 100vw;
-  min-height: 100vh;
-  max-height: 100vh;
+  height: 100vh; /* Full height of the viewport */
+  width: 100vw; /* Full width of the viewport */
 }
 
 .sidebar-left {
@@ -193,6 +191,9 @@ a:hover {
   padding-left: .6rem;
   padding-right: .5rem;
   background-color: #f2f2f2;
+  height: 100%;
+  min-height: fit-content;
+  max-height: 100%;
 }
 
 .content-footer {
@@ -507,10 +508,7 @@ Make the left sidebar take up 25% of the screen width on mobile devices
     flex: 0 0 25%;
   }
   .content-area {
-    flex: 1 1 auto;
-    height: 100vh;
-    min-height: 100vh;
-    max-height: 100vh;
+    flex: 1 1 auto; /* allow this to expand/shrink */
   }
 }
 
