--- a/styles.css
+++ b/styles.css
@@ -193,7 +193,7 @@ a:hover {
   background-color: #f2f2f2;
   height: 100%;
   min-height: fit-content;
-  max-height: fit-content
+  max-height: fit-content;
 }
 
 .content-footer {
