--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,9 @@ a:hover {
        ######################################## */
 .app-container {
   display: flex;
+  position: relative; /* establish a containing block for absolutely positioned children */
   height: 100vh; /* Full height of the viewport */
+  min-height: 100vh; /* Minimum height of the viewport */
   width: 100vw; /* Full width of the viewport */
 }
 
@@ -190,10 +192,10 @@ a:hover {
   padding: .3rem; /* 1rem */
   padding-left: .6rem;
   padding-right: .5rem;
+  margin-bottom: 4rem;
   background-color: #f2f2f2;
   height: 100%;
-  min-height: fit-content;
-  max-height: fit-content;
+  max-height: 100%;
 }
 
 .content-footer {
@@ -202,6 +204,10 @@ a:hover {
   margin-top: .1rem;
   background: #E5E4E2; /* #f9f9f9; */
   border-top: 1px solid #ccc;
+  position: absolute; /* remove from normal flow, position relative to .app-container */ 
+  bottom: 0;          /* align to bottom edge of the container */ 
+  left: 0;            /* span full width */ 
+  width: 100%; 
 }
 
 .tab-content {
