--- a/styles.css
+++ b/styles.css
@@ -513,7 +513,12 @@ Make the left sidebar take up 25% of the screen width on mobile devices
     flex: 0 0 25%;
   }
   .content-area {
-    flex: 1 1 auto; /* allow this to expand/shrink */
+    /* flex: 1 1 auto; allow this to expand/shrink */
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    overflow: auto;
+    height: 100%;
   }
 }
-
